--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
         <div class="title">La Maison de Fleur </div>
         <nav class="nav-collapse">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="appointment.html">Contact</a></li>
         </ul>
     </nav>
     </header>
@@ -46,10 +46,10 @@
                 Our mission remains the same: to honor the rich heritage of French cuisine while embracing innovation and creativity. We invite you to join us on this journey, where every meal is a celebration of taste, tradition, and togetherness.
             </p>
         </div>
-        <div class="image-container">
-            <img class="scalable" src="image/image1.png" alt="Something Important">
-            <img class="scalable" src="image/image2.png" alt="Something Important">
-            <img class="scalable" src="image/image3.png" alt="Something Important">
+        <div class="image-container" >
+            <img class="scalable " id = "pic1" src="image/image1.png" alt="Something Important">
+            <img class="scalable" id = "pic2" src="image/image2.png" alt="Something Important">
+            <img class="scalable" id = "pic3" src="image/image3.png" alt="Something Important">
         </div>
     </section>
     
@@ -60,6 +60,7 @@
                 <h1>Our Philosophy</h1>
                 <br>
                 <p>At La Maison de Fleur, we believe every meal is a journey through flavors, textures, and memories. Guided by a commitment to the freshest ingredients, locally sourced produce, and classic French techniques, we strive to craft dishes that are as beautiful as they are delicious.</p>
+                
                 <br>
                 <div class = "blockquote">
                 <blockquote>“Cooking is an art, and we are the artists.”</blockquote>
