--- a/index.html
+++ b/index.html
@@ -65,12 +65,16 @@
 
         <div class="subscribe">
             <div class="subphoto"> </div>
-            <div class="newsletters">
-                <h1> Hear from us </h1>
-                <p> Subscribe to our email list to get the latest news about special events, new seasonal menu release and other fantastic news!
-                </p>
-                <div class="subpics"></div>
-                <div class="button"><a href="#">SUBMIT</a></div>
+            <div class = "newsletters">
+                <form action="thank.html" method="post">
+                        <h1>Newsletter</h1>
+                        <p>Enter your email in the box below to receive latests news and information about our activities</p>
+                        <fieldset>
+                        <!-- <label for="email">Email</label> -->
+                        <input type="email" id="email" name="user_email" placeholder="email@domain.com" value="" required>
+                        <button type="submit">Submit Now</button>
+                    </fieldset>
+                </form>
             </div>
         </div>
 
