--- a/forum.html
+++ b/forum.html
@@ -12,12 +12,12 @@
 
 <body>
     <header>
-        <div class="title"> The forum part of a marvelous website </div>
+        <div class="title"> La Maison de Fleur </div>
         <nav class="nav-collapse">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="appointment.html">Contact</a></li>
         </ul>
     </nav>
     </header>
@@ -73,9 +73,8 @@
         </div>
     </main>
     
-    
     <footer>
-        <p> Great Food Website @ COMP 126 Final Project</p>
+        <p> ©️ 2024 Copyright by La Maison de FLeur </p>
     </footer>
 
     <script>
