--- a/Submitted.html
+++ b/Submitted.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Submission Received</h1>
-        <a href="index.html" class="button">Back to Menu</a>
+        <a href="index.html" class="button">Back to HomePage</a>
     </div>
 </body>
 </html>
