--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="cat3"> </div>
                 <div class="cat4"> </div>
             </div>
-            <div class="menu"><a href="menu.html"> Sesonal Menu </a></div>
+            <div class="menu"><a href="menu.html"> Seasonal Menu </a></div>
         </div>
 
         <div class="appointment">
