--- a/forum.html
+++ b/forum.html
@@ -14,11 +14,12 @@
     <header>
         <div class="title"> La Maison de Fleur </div>
         <nav class="nav-collapse">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="appointment.html">Contact</a></li>
-        </ul>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="appointment.html">Contact</a></li>
+            </ul>
     </nav>
     </header>
 
