--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav class="nav-collapse">
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="appointment.html">Contact</a></li>
         </ul>
