--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@
                         <fieldset>
                         <!-- <label for="email">Email</label> -->
                         <input type="email" id="email" name="user_email" placeholder="email@domain.com" value="" required>
+                        <!-- Here we change button into a <div> with <a> inside because the form element will send the filled info and cause 405 of our next page after clicking submit
+                            and we do want to show the page after clicking submit button normally without issues.
                         <button type="submit">Submit Now</button>
+                        -->
                     </fieldset>
                 </form>
+                <div class="postbutton"><a href="thank.html">Submit Now</a></div>
             </div>
         </div>
 
